<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>
        <variable
            name="testData"
            type="com.example.daag.model.TestData" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main">

        <ImageView
            android:id="@+id/thumbImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@{testData.name}"/>

        <TextView
            android:id="@+id/tvDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:maxLines="2"
            android:textColor="@color/black"
            android:text="@{testData.description}"/>

    </LinearLayout>

</layout>